feat: Transform to Intellact learning platform with professional UI
- Rebrand from Soft UI to Intellact learning platform
- Update theme colors to professional navy (#2D3561)
- Complete redesign of Home screen with Udemy-style interface
- Add Firebase authentication integration
- Create Login/Signup screens with validation
- Redesign Welcome screen with animated logo
- Professional Profile screen with clean design
- Add working Edit Profile functionality with form validation
- Create My Courses screen with enrolled/completed tabs
- Implement protected navigation with auth awareness
- Remove emojis and add professional typography
- Add production-ready mobile optimizations
- All touch targets meet accessibility standards (44-56px)
- Native TextInput for proper mobile keyboard handling
- Comprehensive error handling and loading states

--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -7,6 +7,7 @@
     "expoVersion": "Expo version",
     "about": "About",
     "visit": "Visit",
+    "logout": "Logout",
     "posted": "Posted on {{date}}",
     "recommended": "Recommended for you",
     "viewall": "View All",
@@ -49,8 +50,8 @@
     }
   },
   "app": {
-    "name": "Soft UI",
-    "fullname": "Soft UI Kit",
+    "name": "Intellact",
+    "fullname": "Intellact App",
     "native": "React Native",
     "link": "creative-tim.com"
   },
@@ -66,10 +67,10 @@
     "extra": "Extra - Automotive"
   },
   "navigation": {
-    "home": "Soft UI",
+    "home": "Intellact",
     "components": "Components",
-    "articles": "Soft UI",
-    "rentals": "Soft UI",
+    "articles": "Intellact",
+    "rentals": "Intellact",
     "rental": "Best Deal",
     "booking": "Booking",
     "chat": "Chat",
@@ -103,16 +104,5 @@
     "followers": "Followers",
     "following": "Following",
     "aboutMe": "About me"
-  },
-  "pro": {
-    "title": "Soft UI PRO",
-    "alert": "This feature is available in PRO version",
-    "components": "• {{count} Components (Buttons, Inputs, Cards, etc)",
-    "screens": "• {{count} Screens (Shopping, Notifications, Chat, etc)",
-    "support": "• Premium Support included",
-    "takeAdvantage": "Take advantage of all the features and screens coded on React Native for both",
-    "appTemplate": "Soft UI PRO React Native is an innovative app template that will help you built stunning mobile applications in no time. It features a huge number of components and screens built to fit together and look amazing:",
-    "saveTime": "This modern app template will save you a lot of time going from prototyping to full-functional code, because all elements are implemented. We wanted the design process to be seamless, so switching from image to the real page is very easy to do!",
-    "buyNow": "Buy now"
   }
 }
