--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -90,7 +90,7 @@
     "documentation": "Documentation"
   },
   "home": {
-    "title": "Soft UI",
+    "title": "Intellact",
     "following": "Following",
     "trending": "Trending"
   },
